Bug 154753 - Ubuntu Libreoffice impress does not show some symbols but Windows libreoffice impress does
Summary: Ubuntu Libreoffice impress does not show some symbols but Windows libreoffice...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
7.5.0.0 alpha1+
Hardware: All Linux (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.6.0 target:7.5.3
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Font-Substitution
  Show dependency treegraph
 
Reported: 2023-04-11 09:49 UTC by sani.usnain
Modified: 2023-04-13 08:45 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Here is the file. Bug is on slide 35 and onwards. (1.24 MB, application/wps-office.pptx)
2023-04-11 09:49 UTC, sani.usnain
Details

Note You need to log in before you can comment on or make changes to this bug.
Description sani.usnain 2023-04-11 09:49:02 UTC
Description:
I have a slide which has some maths symbols which are converted to some alien symbols when i open in ubuntu libreoffice impress but when i open the same slide in my windows libreoffice they are there.
Slide number is 35 and onwards.

Steps to Reproduce:
1. open the slide in libreoffice installed in window and ubuntu

Actual Results:
libreoffice behave differently on different os

Expected Results:
acted similar in both os (windows and ubuntu)


Reproducible: Always


User Profile Reset: No

Additional Info:
nil
Comment 1 sani.usnain 2023-04-11 09:49:41 UTC
Created attachment 186577 [details]
Here is the file. Bug is on slide 35 and onwards.
Comment 2 Stéphane Guillou (stragu) 2023-04-11 13:30:17 UTC
Is the issue that the character epsilon is not rendered?
I can see it in:

Version: 7.4.6.2 / LibreOffice Community
Build ID: 5b1f5509c2decdade7fda905e3e1429a67acd63d
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

But it is replaced by a rectangle character in:

Version: 7.5.2.2 (X86_64) / LibreOffice Community
Build ID: 53bb9681a964705cf672590721dbc85eb4d0c3a2
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Looks like a fallback issue with the Symbol font.
Comment 3 Stéphane Guillou (stragu) 2023-04-11 14:33:48 UTC
Bibisected with linux-64-7.5 repo to first bad commit 1a7510b48092fa3b2886db19a4103a14cdf6def1 which points to core commit:

commit 2df9b7cd3fa03077c9809dab9b94a20dd89002fb
author	Caolán McNamara <caolanm@redhat.com>	Fri Nov 18 12:42:56 2022 +0000
committer	Caolán McNamara <caolanm@redhat.com>	Mon Nov 21 09:55:06 2022 +0100
stop setting OpenSymbol as a "Symbol" font
which has a specific meaning of a Windows Symbol encoding
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/142947
Tested-by: Caolán McNamara <caolanm@redhat.com>
Reviewed-by: Caolán McNamara <caolanm@redhat.com>

Caolán, can you please have a look?
Comment 4 Commit Notification 2023-04-11 18:34:24 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/658c2c98c98662eb06f22c1b743f10281e191c16

tdf#154753 if substituting with OpenSymbol check if there for a recode

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Caolán McNamara 2023-04-11 18:35:15 UTC
that seems to fix it for trunk, backport to 7-5 in gerrit
Comment 6 Stéphane Guillou (stragu) 2023-04-12 12:42:36 UTC
Fix verified in:

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 1b06f35de68a555b85bceb5fc29d1a5f426f4bb7
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Thanks Caolán!
Comment 7 Commit Notification 2023-04-13 08:45:05 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/01cbe691e6c64dbccdc839d79204b45742b343fb

tdf#154753 if substituting with OpenSymbol check if there for a recode

It will be available in 7.5.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.