tdf#154753 if substituting with OpenSymbol check if there for a recode

entry for that font->OpenSymbol conversion. It might make sense to drop
the conditionals and just use the result of ConvertChar::GetRecodeData
if there are any, but keep close to what has worked historically.

Change-Id: Idf9ee0f8068f1ff8e7f179ba5087763e44ade268
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/150201
Tested-by: Jenkins
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>